--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_farm">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.tripi.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_farm"
+        android:name="com.example.tripi.ui.farm.FarmFragment"
+        android:label="@string/title_farm"
+        tools:layout="@layout/fragment_farm" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.tripi.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_map"
+        android:name="com.example.tripi.ui.map.MapFragment"
+        android:label="@string/title_map"
+        tools:layout="@layout/fragment_map" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.tripi.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_camera"
+        android:name="com.example.tripi.ui.camera.CameraFragment"
+        android:label="@string/title_camera"
+        tools:layout="@layout/fragment_camera" />
+
+    <fragment
+        android:id="@+id/navigation_quests"
+        android:name="com.example.tripi.ui.quests.QuestsFragment"
+        android:label="@string/title_quests"
+        tools:layout="@layout/fragment_quests" />
+
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.tripi.ui.profile.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
