--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,6 +16,10 @@
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
-    <item android:title="Item" />
+
+    <item
+        android:id="@+id/navigation_camera"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:title="@string/title_camera" />
 
 </menu>
