--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="?attr/actionBarSize"
+    android:background="?attr/colorPrimary"
+    >
 
     <!-- Left: Profile icon -->
     <ImageView
@@ -11,12 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="12dp"
-        android:src="@drawable/ic_profile"
+        android:src="@drawable/profile_white"
         android:contentDescription="Profile"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
 
     <!-- Right: Wallet icon -->
     <ImageView
@@ -24,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="12dp"
-        android:src="@drawable/ic_wallet"
+        android:src="@drawable/wallet_white"
         android:contentDescription="Wallet"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
