--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="24dp">
+    android:fitsSystemWindows="true"
+    android:paddingTop="?attr/actionBarSize">
 
     <TextView
         android:id="@+id/totalPointsTextView"
@@ -13,7 +14,9 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginBottom="24dp" />
+        android:layout_marginBottom="84dp"
+        android:paddingTop="54dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recentPurchasesRecyclerView"
